# godot-environment

./: .gitignore  CMakeLists.txt  README.md  design.md  design.txt  future_work.md
agent/: CMakeLists.txt
agent/include/gdev/: Agent.hpp  Environment.hpp  Step.hpp  exec.hpp
agent/src/: Agent.cpp  Environment.cpp  Step.cpp  args.hpp  linux.cpp  platform_independent.cpp  windows.cpp
agent/test/: CMakeLists.txt  config.hpp.in  connection_test.cpp
agent/test/exec/: CMakeLists.txt
agent/test/pendulum_agent/: main.cpp
agent/test/pendulum_environment/: HumanControl.gd  HumanControl.tscn  MultipleViewports.gd  Pendulum.tscn  PendulumEnv.gd  PendulumEnv.tscn  Setup.gd
agent/test/pendulum_environment/pendulum/: Arm.gd  Pendulum.gd  Pendulum.tscn
cmake/: preconfig.cmake
core/: CMakeLists.txt
core/include/gdev/: Binding.hpp  Exceptions.hpp  MessageContext.hpp  RequestType.hpp  Serialize.hpp  Space.hpp  SpaceDef.hpp  Value.hpp  ValueDef.hpp  ValueRef.hpp  ValueType.hpp
core/include/gdev/core/: Dims.hpp  Range.hpp
core/src/: MessageContext.cpp  Serialize.cpp  Space.cpp  SpaceDef.cpp  Value.cpp  ValueDef.cpp  ValueIterators.cpp  ValueRef.cpp  ValueType.cpp
core/test/: CMakeLists.txt  serialization.cpp  space.cpp  space_def.cpp  value.cpp  value_def.cpp
environment/: CMakeLists.txt
environment/include/gdev/: EnvironmentNode.hpp  GodotConversions.hpp  TestAgent.hpp  ValueIndexer.hpp  ValueWrapper.hpp  util.hpp
environment/src/: EnvironmentNode.cpp  EnvironmentNodeDefine.cpp  EnvironmentNodePrint.cpp  GodotConversions.cpp  TestAgent.cpp  ValueIndexer.cpp  ValueUtils.hpp  ValueWrapper.cpp  gdnlibrary.cpp  util.cpp
test/: CMakeLists.txt
test/agent/: CMakeLists.txt  config.hpp.in
test/agent/exec/: main.cpp
test/agent/pendulum_agent/: CMakeLists.txt  main.cpp
test/agent/pendulum_environment/: HumanControl.gd  HumanControl.tscn  Test.gd  Test.tscn
test/agent/pendulum_environment/pendulum/: Pendulum.gd
test/core/: CMakeLists.txt  communication.cpp  serialization.cpp  space.cpp  space_def.cpp  value.cpp  value_def.cpp
test/core/value/: access.cpp  init.cpp  move.cpp
